# Submission

obj_det/: CMakeLists.txt  package.xml
obj_det/src/: traffic_segmentation.cpp
ros2_kitti_publishers/: README.md
ros2_kitti_publishers/src/node/: kitti_publishers_node.cpp
volta/volta_control/config/: bot_1.yaml  bot_2.yaml  control.yaml
volta/volta_control/launch/: control.launch
volta/volta_description/launch/: description.launch  multibot_1.launch  multibot_2.launch  multibot_3.launch  volta_bot.launch
volta/volta_description/meshes/: opt4.dae  optimized_volta.dae
volta/volta_description/script/: new.cpp
volta/volta_description/urdf/: volta.urdf.xacro  volta.xacro  volta_properties.xacro
volta/volta_description/urdf/components/: caster_volta.urdf.xacro  wheel_volta.urdf.xacro
